<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/issueDetailsImage"
        android:layout_width="131dp"
        android:layout_height="127dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:icon="@drawable/baseline_warning_24"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/issueDetailsTitle"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:text="Title"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/issueDetailsImage"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/issueDetailsDescriptionLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="Description"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsImage" />

    <TextView
        android:id="@+id/issueDetailsDescription"
        android:layout_width="359dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="Description Body"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsDescriptionLabel" />

    <TextView
        android:id="@+id/issueDetailsReporter"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="1dp"
        android:text="Reporter"
        app:layout_constraintStart_toEndOf="@+id/issueDetailsImage"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsCategory" />

    <TextView
        android:id="@+id/issueDetailsLocation"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="5dp"
        android:text="Location"
        app:layout_constraintStart_toEndOf="@+id/issueDetailsImage"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsReporter" />

    <TextView
        android:id="@+id/issueDetailsStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="Status"
        app:layout_constraintStart_toEndOf="@+id/issueDetailsImage"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsLocation" />

    <TextView
        android:id="@+id/issueDetailsCategory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="4dp"
        android:text="Category"
        app:layout_constraintStart_toEndOf="@+id/issueDetailsImage"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsTitle" />

    <ListView
        android:id="@+id/listComments"
        android:layout_width="368dp"
        android:layout_height="158dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/buttonAddComment" />

    <EditText
        android:id="@+id/editAddComment"
        android:layout_width="377dp"
        android:layout_height="103dp"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="18dp"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Add Comment"
        android:inputType="textMultiLine"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsCommentsLabel" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="377dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/issueDetailsDescription">

        <Button
            android:id="@+id/buttonDeleteIssue"
            android:layout_width="120dp"
            android:layout_height="41dp"
            android:layout_marginStart="6dp"
            android:text="DELETE"
            app:layout_constraintStart_toEndOf="@+id/buttonEditIssue"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonEditIssue"
            android:layout_width="120dp"
            android:layout_height="41dp"
            android:text="EDIT"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/buttonFollowIssue"
            android:layout_width="120dp"
            android:layout_height="41dp"
            android:layout_marginStart="6dp"
            android:text="FOLLOW"
            app:layout_constraintStart_toEndOf="@+id/buttonDeleteIssue"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/issueDetailsCommentsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="5dp"
        android:text="Comments"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout" />

    <Button
        android:id="@+id/buttonAddComment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="18dp"
        android:layout_marginTop="8dp"
        android:text="ADD COMMENT"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editAddComment" />

</androidx.constraintlayout.widget.ConstraintLayout>