<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:id="@+id/navbar_menu"
        android:icon="@drawable/baseline_menu_24"
        android:title="navbar_menu"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/navbar_menu_createIssue"
                android:title="Create Issue"/>
            <item
                android:id="@+id/navbar_menu_viewIssues"
                android:title="View Issues"/>
        </menu>
    </item>

    <item
        android:id="@+id/navbar_profile"
        android:icon="@drawable/baseline_person_outline_24"
        android:title="navbar_profile"
        app:showAsAction="ifRoom">
        <menu>
            <item
                android:id="@+id/navbar_profile_login"
                android:title="Log In"/>
            <item
                android:id="@+id/navbar_profile_signUp"
                android:title="Sign Up"/>
            <item
                android:id="@+id/navbar_profile_viewProfile"
                android:title="View Profile"/>
            <item
                android:id="@+id/navbar_profile_logOut"
                android:title="Log Out"/>
        </menu>
    </item>
</menu>